<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_app_color"
    android:padding="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/app_logo"
                android:layout_width="match_parent"
                android:layout_height="150dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/act_login"
                android:textColor="@color/light"
                android:textSize="20sp"
                android:gravity="center" />

            <EditText
                android:id="@+id/txt_user"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:padding="10dp"
                android:background="@drawable/rounded_input"
                android:textColor="@color/text_not_important"
                android:hint="@string/username"
                android:textColorHint="@color/text_not_important"/>

            <EditText
                android:id="@+id/txt_pass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:background="@drawable/rounded_input"
                android:textColor="@color/text_not_important"
                android:hint="@string/password"
                android:textColorHint="@color/text_not_important"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/button_enter"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_btn"
                android:textColor="@color/light"
                android:textStyle="bold"
                android:background="@drawable/action_button"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textColor="@color/light"
            android:textSize="@dimen/text_medium"
            android:gravity="center"
            />
    </LinearLayout>

</LinearLayout>