<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/frame_map"
            android:src="@drawable/map_cover"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:clickable="true"
            android:focusable="true"
            android:descendantFocusability="blocksDescendants"/>

        <LinearLayout
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:paddingBottom="5dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/customer_label"
                        android:textSize="20sp"
                        android:textColor="@color/text_not_important"
                        android:layout_marginRight="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView android:id="@+id/txtOrderDCustomer"
                        android:text="Ramon Zuniga"
                        android:textSize="20sp"
                        android:textColor="@color/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:paddingBottom="5dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/zone_label"
                        android:textColor="@color/text_not_important"
                        android:layout_marginRight="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView android:id="@+id/txtOrderDZone"
                        android:text="Miralvalle"
                        android:textColor="@color/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
                <LinearLayout
                    android:paddingBottom="5dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/customer_phone_label"
                        android:textSize="15sp"
                        android:textColor="@color/text_not_important"
                        android:layout_marginRight="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2222-2222"
                        android:id="@+id/txtCustomerPhone" />

                </LinearLayout>
                <TextView android:id="@+id/txtOrderDAddress"
                    android:text="Calle San Antonio Abad, Reparto Bernal 1 Casa 7"
                    android:textSize="13sp"
                    android:textColor="@color/text_not_important"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView android:id="@+id/txtOrderDRefAddress"
                    android:text="Avenida bernal, bajando redondel constitucion"
                    android:textSize="13sp"
                    android:textColor="@color/text_not_important"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.joanzapata.iconify.widget.IconTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/icon_credit_card"
                    android:text="@string/fa_credit_card"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:textColor="@color/red_icon"
                    />

            </LinearLayout>



            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <com.joanzapata.iconify.widget.IconTextView
                android:gravity="center"
                android:layout_weight="4.5"
                android:text="@string/icon_flag"
                android:textSize="30sp"
                android:textColor="@color/red_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout android:id="@+id/llOrderDetail"
            android:clickable="true"
            android:paddingTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.joanzapata.iconify.widget.IconTextView
                android:layout_marginTop="2dp"
                android:layout_weight="6"
                android:gravity="center"
                android:text="@string/icon_shopping_cart"
                android:textSize="20sp"
                android:textColor="@color/red_icon"
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <LinearLayout
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/order_detail_label"
                    android:textSize="20sp"
                    android:textColor="@color/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView android:id="@+id/txtOrderDProducts"
                    android:text="2 Chicken Fajita"
                    android:textSize="20sp"
                    android:textColor="@color/text_not_important"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:id="@+id/txtOrderDTotalRes"
                    android:gravity="center"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    android:text="$15.99"
                    android:textColor="@color/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:text="@string/customer"
                    android:textColor="@color/text_not_important"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:id="@+id/txtOrderDTotalCustomer"
                    android:gravity="center"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    android:text="$2.99"
                    android:textColor="@color/red_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:text="@string/change"
                    android:textColor="@color/text_not_important"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <com.joanzapata.iconify.widget.IconButton
            android:id="@+id/button_acept"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:text="@string/order_complete_btn"
            android:textColor="@android:color/white"
            android:background="@drawable/action_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.joanzapata.iconify.widget.IconButton
            android:id="@+id/button_reject"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:text="@string/order_reject_btn"
            android:textColor="@android:color/white"
            android:background="@drawable/action_reject_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>